# simcommand

./: .gitignore  LICENSE  Makefile  README.md  build.sbt  build.sc  mapping  networkData.json  vivadoBuild.tcl
.github/workflows/: ci.yml
VivadoGenesysSim/: NeuroProcGenesysTb.vhd
VivadoProject/: Genesys-2-Master.xdc  clk_wiz_0.v  clk_wiz_0_clk_wiz.v  neuroTop.v
cocotb/: pyproject.toml
cocotb/gcd_tb/: Makefile  gcd_tb.py
cocotb/neuromorphic_tb/: Makefile  mapping  neuromorphic_processor_tb.py
cocotb/testbench/: Makefile  neuromorphic_processor_tb.py
mapping/: InsertLines.py  convert.py  evaldatac2e0.mem  evaldatac2e2.mem  evaldatac2e4.mem  evaldatac3e0.mem  evaldatac3e1.mem  evaldatac3e2.mem  evaldatac3e3.mem  evaldatac3e6.mem  gentcl.sh  in0mem.mem  in1mem.mem  interfaceLut196.json  interfaceLut484.json  interfaceLut784.json  makeinMem.py  networkData.json  neuroproc_tb.vhd  periods.txt  synthesis.py
mapping/meminit/: evaldatac2e1.mem  evaldatac2e3.mem  evaldatac2e5.mem  evaldatac2e6.mem  evaldatac2e7.mem  evaldatac3e4.mem  evaldatac3e5.mem  evaldatac3e7.mem
mapping/resources/: clk_wiz_0.v  clk_wiz_0_clk_wiz.v  neuroConstraints.xdc  neuroTop.v
netwkdev/: KWSonSNN.ipynb  export.py  train.py  trainpt.py
netwkdev/kwsonsnn/: dataset.py  encode.py  mapping.py  model.py  train.py  utils.py
project/: plugins.sbt
src/benchmarks/: DecoupledGcd.scala  NeuromorphicProcessor.scala
src/jmhbenchmarks/: AsyncAwaitTester.scala  BenchmarkState.scala  DecoupledGcdTester.scala  TailRecTester.scala
src/simcommand/: Action.scala  ChiselSimcommandTester.scala  (+10 more)
(+122 files in other folders)
